# TBDEngine

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md
include/ImGUI/: imgui_impl_glfw.h  imgui_impl_vulkan.h
include/ImGui/: imgui_freetype.h  imgui_impl_glfw.h  imgui_impl_vulkan.h
include/core/: camera.h  game_engine.h  game_object.h  scene.h  simulation_manager.h
include/core/components/: component.h  light.h  material.h  model.h  rigidbody.h  transform.h
include/gui/: AddObjectWindow.h  CameraDebugWindow.h  Custom_Widgets.h  Details.h  FileHierarchy.h  LoadFileWindow.h  MenuBar.h  SaveAsWindow.h  Viewport.h  gui_engine.h  secondary_menu_bar.h
include/physics/: physics_engine.h
include/render/: Basic_Shader.h  Program.h  basic_shader.h  render_engine.h  shader.h
include/scripting/: common_functions.h  scripting_engine.h
include/serial/: cameras.h  lights.h  models.h  project.h  scenes.h
include/serial/components/: component.h  components.h  light.h  material.h  model.h  transform.h
include/vk/: vk_engine.h  vk_images.h  vk_initializers.h  vk_types.h
resources/: frag.glsl  phong_frag.glsl  phong_vert.glsl  silhouette_frag.glsl  silhouette_vert.glsl
resources/shaders/: frag_gradient.glsl  frag_gradient_box.glsl  map_pass1_frag.glsl  map_pass1_vert.glsl  map_pass2_frag.glsl  map_pass2_vert.glsl  phong_frag.glsl  phong_vert.glsl  silhouette_vert.glsl  vert.glsl  vert_gradient.glsl
src/: UI.cpp  UI.h  component.h  gameObject.h  main.cpp  transform.h
src/ImGUI/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/ImGui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/core/: game_object.cpp  scene.cpp
src/gui/: Add_Object_Window.cpp  Camera_Debug_Window.cpp  Details.cpp  FileHierarchy.cpp  File_Hierarchy.cpp  LoadFileWindow.cpp  Menu_Bar.cpp  SaveAsWindow.cpp  Viewport.cpp  gui_engine.cpp  secondary_menu_bar.cpp
src/physics/: physics_engine.cpp
src/render/: Program.cpp  render_engine.cpp  shader.cpp
src/scripting/: common_functions.cpp  scripting_engine.cpp
src/serial/: cameras.cpp  dummy.yaml  lights.cpp  models.cpp  project.cpp  scenes.cpp
src/serial/components/: component.cpp  components.cpp  light.cpp  material.cpp  model.cpp  transform.cpp
src/vk/: vk_engine.cpp  vk_images.cpp  vk_initializers.cpp
user/: My Project.yaml  project.yaml  test.yaml  test2.yaml
user/Assets/: test.as  test2.as
